--- a/static/times_tables/index.html
+++ b/static/times_tables/index.html
@@ -1327,6 +1327,7 @@
     // Submit answer
     function submitAnswer() {
       if (!state.currentCell || !state.isPlaying || state.answerSubmitted) return;
+      if (answerInput.value.trim() === '') return; // Don't submit empty answers
       state.answerSubmitted = true;
 
       const answer = parseInt(answerInput.value);
@@ -1424,18 +1425,53 @@
     });
     devBtn.addEventListener('click', unlockAllLevels);
 
-    // Global Enter key handler for buttons
+    // Navigate to a level by offset (for arrow key navigation)
+    function navigateLevel(levelOffset, operationOffset) {
+      if (!state.currentLevel) return;
+
+      const operations = ['multiplication', 'division'];
+      const currentOpIndex = operations.indexOf(state.currentOperation);
+      const newOpIndex = Math.max(0, Math.min(1, currentOpIndex + operationOffset));
+      const newOperation = operations[newOpIndex];
+
+      const currentLevelId = state.currentLevel.id;
+      const newLevelId = Math.max(1, Math.min(LEVELS.length, currentLevelId + levelOffset));
+      const newLevel = LEVELS.find(l => l.id === newLevelId);
+
+      if (newLevel && isUnlocked(newLevelId, newOperation)) {
+        selectLevel(newLevel, newOperation);
+      } else if (operationOffset !== 0 && isUnlocked(currentLevelId, newOperation)) {
+        // If only switching operation, try to stay on current level
+        selectLevel(state.currentLevel, newOperation);
+      }
+    }
+
+    // Global keyboard handler
     document.addEventListener('keydown', (e) => {
-      if (e.key === 'Enter') {
-        // Result screen visible - trigger next/try again button
-        if (resultScreen.classList.contains('visible')) {
-          e.preventDefault();
-          nextBtn.click();
-        }
-        // Not playing and start button visible - trigger start
-        else if (!state.isPlaying && !startBtn.classList.contains('hidden')) {
+      // Result screen visible - trigger next/try again button
+      if (e.key === 'Enter' && resultScreen.classList.contains('visible')) {
+        e.preventDefault();
+        nextBtn.click();
+        return;
+      }
+
+      // Not playing - handle level navigation and start
+      if (!state.isPlaying && !startBtn.classList.contains('hidden')) {
+        if (e.key === 'Enter') {
           e.preventDefault();
           startBtn.click();
+        } else if (e.key === 'ArrowLeft') {
+          e.preventDefault();
+          navigateLevel(-1, 0);
+        } else if (e.key === 'ArrowRight') {
+          e.preventDefault();
+          navigateLevel(1, 0);
+        } else if (e.key === 'ArrowUp') {
+          e.preventDefault();
+          navigateLevel(0, -1);
+        } else if (e.key === 'ArrowDown') {
+          e.preventDefault();
+          navigateLevel(0, 1);
         }
       }
     });
@@ -1444,6 +1480,11 @@
       if (e.key === 'Enter') {
         submitAnswer();
       }
+    });
+
+    // Only allow digits in answer input
+    answerInput.addEventListener('input', (e) => {
+      e.target.value = e.target.value.replace(/[^0-9]/g, '');
     });
 
     // Prevent popup close on overlay click during game
